--- a/Sparkle.Api/appsettings.json
+++ b/Sparkle.Api/appsettings.json
@@ -8,5 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Default": "Data Source=sparkle.db;"
+  },
+  "SRCSettings": {
+    "BaseUrl": "http://localhost:8080"
   }
 }
