--- a/Sparkle.Api/Sparkle.Api.csproj
+++ b/Sparkle.Api/Sparkle.Api.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -7,6 +7,13 @@
     <UserSecretsId>d031abfb-11b9-4f01-8563-c2e079560398</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Remove="Api\**" />
+    <Content Remove="Api\**" />
+    <EmbeddedResource Remove="Api\**" />
+    <None Remove="Api\**" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="linq2db" Version="5.2.2" />
@@ -21,7 +28,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Api\Handlers\" />
+    <ProjectReference Include="..\Sparkle.Transfer\Sparkle.Transfer.csproj" />
+    <ProjectReference Include="..\SparkleRegressor.Client\SparkleRegressor.Client.csproj" />
   </ItemGroup>
 
 </Project>
