--- a/Sparkle.Api/Dockerfile
+++ b/Sparkle.Api/Dockerfile
@@ -16,6 +16,13 @@ RUN dotnet build "Sparkle.Api.csproj" -c Release -o /app/build
 FROM build AS publish
 RUN dotnet publish "Sparkle.Api.csproj" -c Release -o /app/publish /p:UseAppHost=false
 
+# Copy the Migrations and Seed directories
+COPY Infrastructure/Migrations /app/Infrastructure/Migrations
+COPY Infrastructure/Seed /app/Infrastructure/Seed
+
+COPY data.csv /app/Infrastructure/Seed/data.csv
+COPY initial.sql /app/Infrastructure/Migrations/initial.sql
+
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
