--- a/Sparkle.Api/Dockerfile
+++ b/Sparkle.Api/Dockerfile
@@ -22,6 +22,7 @@ FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
 
+RUN ls -R /app/publish
 RUN ls -R /app
 
 ENTRYPOINT ["dotnet", "Sparkle.Api.dll"]
