--- a/Sparkle.Api/Sparkle.Api.csproj
+++ b/Sparkle.Api/Sparkle.Api.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
     <PackageReference Include="linq2db" Version="5.2.2" />
     <PackageReference Include="linq2db.AspNet" Version="5.2.2" />
     <PackageReference Include="MediatR" Version="12.1.1" />
