added src api adress

--- a/Sparkle.Api/appsettings.Production.json
+++ b/Sparkle.Api/appsettings.Production.json
@@ -1,4 +1,4 @@
-{
+﻿{
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -10,6 +10,6 @@
     "Default": "Data Source=sparkle.db;"
   },
   "SRCSettings": {
-    "BaseUrl": "http://localhost:8080"
+    "BaseUrl": "https://sparkle-regressor.onrender.com"
   }
 }
