--- a/Sparkle.Api/Sparkle.Api.csproj
+++ b/Sparkle.Api/Sparkle.Api.csproj
@@ -16,19 +16,18 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
     <PackageReference Include="linq2db" Version="5.2.2" />
     <PackageReference Include="linq2db.AspNet" Version="5.2.2" />
     <PackageReference Include="MediatR" Version="12.1.1" />
-    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.9" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.9" />
-    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.18.1" />
-    <PackageReference Include="Npgsql" Version="7.0.4" />
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.11" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.11" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.5" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     <PackageReference Include="System.Data.SQLite.Core" Version="1.0.118" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Sparkle.Handling\Sparkle.Handling.csproj" />
     <ProjectReference Include="..\Sparkle.Infrastructure\Sparkle.Infrastructure.csproj" />
     <ProjectReference Include="..\Sparkle.Shared\Sparkle.Shared.csproj" />
     <ProjectReference Include="..\Sparkle.Transfer\Sparkle.Transfer.csproj" />
