--- a/Sparkle.Infrastructure/Sparkle.Infrastructure.csproj
+++ b/Sparkle.Infrastructure/Sparkle.Infrastructure.csproj
@@ -7,12 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="Migrations\initial.sql" />
+    <None Remove="Migrations\1_initial.sql" />
     <None Remove="Seed\data.csv" />
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="Migrations\initial.sql">
+    <Content Include="Migrations\1_initial.sql">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Seed\data.csv">
