--- a/Sparkle.Shared/Sparkle.Shared.csproj
+++ b/Sparkle.Shared/Sparkle.Shared.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="linq2db" Version="5.2.2" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
   </ItemGroup>
@@ -15,5 +16,8 @@
     <ProjectReference Include="..\Sparkle.Domain\Sparkle.Domain.csproj" />
     <ProjectReference Include="..\Sparkle.Transfer\Sparkle.Transfer.csproj" />
   </ItemGroup>
+	<ItemGroup>
+		<Using Include="BCrypt.Net.BCrypt" Alias="BC"/>
+	</ItemGroup>
 
 </Project>
