extracted SparkleRegressor.Client layer to standalone nugget. Added nugget.config file.

--- a/Sparkle.Api/Sparkle.Api.csproj
+++ b/Sparkle.Api/Sparkle.Api.csproj
@@ -22,6 +22,7 @@
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.11" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.5" />
+    <PackageReference Include="SparkleRegressor.Client" Version="1.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     <PackageReference Include="System.Data.SQLite.Core" Version="1.0.118" />
   </ItemGroup>
@@ -31,7 +32,6 @@
     <ProjectReference Include="..\Sparkle.Infrastructure\Sparkle.Infrastructure.csproj" />
     <ProjectReference Include="..\Sparkle.Shared\Sparkle.Shared.csproj" />
     <ProjectReference Include="..\Sparkle.Transfer\Sparkle.Transfer.csproj" />
-    <ProjectReference Include="..\SparkleRegressor.Client\SparkleRegressor.Client.csproj" />
   </ItemGroup>
 
 </Project>
